--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,151 @@
-name: Build and Test
+name: ci
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths:
+      - lib/**
+      - test/**
+      - config/*
+      - mix.lock
+      - mix.exs
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+    paths:
+      - lib/**
+      - test/**
+      - config/*
+      - mix.lock
+      - mix.exs
 
-permissions:
-  contents: read
+env:
+  ELIXIR_VERSION: 1.14.2
+  OTP_VERSION: 25
 
 jobs:
-  build:
-
-    name: Build and test
-    runs-on: ubuntu20
-
+  test:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Elixir
-      uses: erlef/setup-beam@988e02bfe678367a02564f65ca2e37726dc0268f
-      with:
-        elixir-version: '1.14'
-        otp-version: '24'
-    - name: Restore dependencies cache
-      uses: actions/cache@v3
-      with:
-        path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
-    - name: Install dependencies
-      run: mix deps.get
-    - name: Run tests
-      run: mix test
-    # - name: Run dialyzer
-    #   run: mix dialyzer
-    - name: Run credo
-      run: mix credo
-    - name: Generate docs
-      run: mix docs
+      - uses: actions/checkout@v3
+
+      - name: Setup elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          otp-version: ${{ env.OTP_VERSION }}
+
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v3
+        id: mix-cache
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ env.OTP_VERSION }}-${{ env.ELIXIR_VERSION }}-mix-${{ hashFiles('**/mix.lock') }}
+
+      - name: Install Mix Dependencies
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+
+      - name: Run Tests
+        run: mix test
+        if: success() || failure()
+
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          otp-version: ${{ env.OTP_VERSION }}
+
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v3
+        id: mix-cache
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ env.OTP_VERSION }}-${{ env.ELIXIR_VERSION }}-mix-${{ hashFiles('**/mix.lock') }}
+
+      - name: Install Mix Dependencies
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+
+      - name: Run Hex Audit
+        run: mix hex.audit
+        if: success() || failure()
+
+      - name: Run Deps Audit
+        run: mix deps.audit
+        if: success() || failure()
+
+      - name: Run Sobelow
+        run: mix sobelow --exit
+        if: success() || failure()
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          otp-version: ${{ env.OTP_VERSION }}
+
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v3
+        id: mix-cache
+        with:
+          path: deps
+          key: ${{ runner.os }}-${{ env.OTP_VERSION }}-${{ env.ELIXIR_VERSION }}-mix-${{ hashFiles('**/mix.lock') }}
+
+      - name: Install Mix Dependencies
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+
+      - name: Check Formatting
+        run: mix format --check-formatted
+        if: success() || failure()
+
+      - name: Run Credo
+        run: mix credo --strict
+        if: success() || failure()
+
+      - name: Retrieve PLT Cache
+        uses: actions/cache/restore@v3
+        id: plt-cache-restore
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-${{ env.OTP_VERSION }}-${{ env.ELIXIR_VERSION }}-plt-${{ hashFiles('**/mix.lock') }}
+
+      - name: Create PLTs
+        run: |
+          mkdir -p priv/plts
+          mix dialyzer --plt
+        if: steps.plt-cache-restore.outputs.cache-hit != 'true'
+
+      - name: Save PLT Cache
+        uses: actions/cache/save@v3
+        id: plt-cache-save
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-${{ env.OTP_VERSION }}-${{ env.ELIXIR_VERSION }}-plt-${{ hashFiles('**/mix.lock') }}
+        if: steps.plt-cache-restore.outputs.cache-hit != 'true'
+
+      - name: Run Dialyzer
+        run: mix dialyzer
+        if: success() || failure()
